--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.0-alpha2",
     "core-js": "^3.8.3",
     "firebase": "^9.19.1",
+    "moment": "^2.29.4",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1"
   },
