--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^9.19.1",
     "moment": "^2.29.4",
     "vue": "^2.6.14",
+    "vue-croppa": "^1.3.8",
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
