--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.29.4",
     "vue": "^2.6.14",
     "vue-croppa": "^1.3.8",
+    "vue-multiselect": "^2.1.7",
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
